# Tanx

./: CMakeLists.txt  main.cpp (2)
dependencies/random/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  effolkronium_randomTargets.cmake  install_manifest.txt
dependencies/random/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  random_local_test  random_static_test  random_thread_local_test
dependencies/randomx/: Makefile  cmake_install.cmake
dependencies/randomx/test/: CTestTestfile.cmake
include/: bullet.h  camera.h  collidable.h  constants.h  environment.h  health_bar.h  model_handler.h  player.h  vector_3d.h  wall.h
include/enemies/: basic_enemy_tank.h  enemy_factory.h  enemy_like.h
src/: bullet.cpp  camera.cpp  environment.cpp  health_bar.cpp  main.cpp  model_handler.cpp  player.cpp  vector_3d.cpp  wall.cpp
src/enemies/: basic_enemy_tank.cpp  enemy_factory.cpp
